--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
 	<link rel="icon" type="image/png" href="/icons8-falcon-16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="/icons8-falcon-32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/icons8-falcon-96.png" sizes="96x96">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"
+		integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js" integrity="sha512-HX+/SvM7094YZEKOCtG9EyjRYvK8dKlFhdYAnVCGNxMkA59BZNSZTZrqdDlLXp0O6/NjDb1uKnmutUeuzHb3iQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<link rel="stylesheet" href="../asset/css/index.css">
 	<link rel="stylesheet" href="https://js.arcgis.com/4.22/esri/themes/light/main.css">
 	<script src="https://js.arcgis.com/4.22/"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="./js/main.js"></script>
 </head>
 
 <body>
 	<div class="map">
+		<!-- <input type="checkbox" name="" id="side-menu-switch">
+		<nav class="side-menu">
+			<select class="county-menu">
+				<option id="city" value=""></option>
+				<option id="district" value=""></option>
+			</select>
+			<label class="side-menu-switch__label" for="side-menu-switch">
+				<i class="fa-solid fa-angle-right"></i>
+			</label>
+		</nav> -->
 		<div id="viewDiv">
 			<div class="zoom-widget"></div>
 			<div id="SRTM_Color_Index"></div>
@@ -33,11 +50,13 @@
 					title="Clear graphics"></button>
 			</div>
 		</div>
+		<div class="esri-widget" id="optionsDiv">
+			<select class="esri-widget" id="countySelect">
+			</select>
+		</div>
 		<footer id="footer">
 			<div id="outputMessages" class="esri-widget"></div>
 		</footer>
-		<span id="layerToggle" class="esri-widget"> <input type="checkbox" id="streetsLayer" checked /> Transportation
-		</span>
 	</div>
 </body>
 
