[feat] 啟用/停用地圖資訊

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<!-- custom widget start -->
 		<div class="switch__container" id="switchIdentify">
 			<h3>啟用/停用地區資訊</h3>
-			<input id="switch-shadow" class="switch switch--shadow" type="checkbox" onclick="toggleLocateInfo()">
+			<input id="switch-shadow" class="switch switch--shadow" type="checkbox">
 			<label for="switch-shadow"></label>
 		</div>
 		<div id="optionsDiv">
